--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,25 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.underline-global {
+  display: inline-block;
+  position: relative;
+}
+
+.underline-global:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0px;
+  left: 0;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.underline-global:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
